# harpi-reloaded

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/harpi/application/: exceptions.py  player_service.py
src/harpi/application/commands/: __init__.py  handlers.py  pause.py  play.py  resume.py  skip.py  stop.py
src/harpi/application/ports/: audio.py  command.py
src/harpi/domain/: mixer.py  queue.py  track.py
src/harpi/infrastructure/: command_router.py  discord_bot.py  discord_player.py  mixed_audio_source.py  youtube_resolver.py
src/harpi/services/: player.py
test/e2e/: __init__.py  test_full_playback_flow.py
test/integration/: test_discord_bot.py  test_discord_player.py  test_player_service_io.py  test_player_workflow.py  test_resolver.py
test/unit/: conftest.py
test/unit/application/: test_player_service.py
test/unit/application/commands/: test_play.py  test_playback_controls.py  test_queue_command.py
test/unit/domain/: test_mixer.py  test_queue.py  test_track.py
test/unit/infrastructure/: test_command_router.py  test_discord_bot.py  test_discord_player.py  test_fake_player.py  test_mixed_audio_source.py
test/unit/services/: test_player.py
