[project]
name = "harpi-reloaded"
version = "0.1.0"
description = "A Discord bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutmut>=3.5.0",
    "pydantic>=2.13.4",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytubefix>=10.7.3",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]


[tool.pytest.ini_options]
markers = ["integration: requires network (deselect with -m 'not integration')"]
addopts = [
    "--import-mode=importlib",
    "--cov=harpi",
    "--cov-report=term-missing",
    "--ignore=mutants/",
]

[tool.mutmut]
paths_to_mutate = ["src/harpi/domain", "src/harpi/application"]
tests_dir = ["test/unit"]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harpi"]

[tool.pyright]
extraPaths = ["."]
